# bet2

./: CMakeLists.txt  README.rst  bet2.cpp  setup.py  test.py
miscmaths/: t2z.cc
niftiio/: CMakeLists.txt
